--- a/.env
+++ b/.env
@@ -3,8 +3,9 @@ APP_KEY=
 APP_DEBUG=true
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=arlendbteste.mysql.database.azure.com
 DB_PORT=3306
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DB_DATABASE=tabela1
+DB_USERNAME=arlendbteste
+DB_PASSWORD=3KT8zx203@Brasil
+
