--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-DB_HOST=arlendbteste.mysql.database.azure.com
-DB_USERNAME=arlendbteste
-DB_PASSWORD=3KT8zx203@Brasil
-DB_DATABASE=tabela1
-CA_CERT_PATH=DigiCertGlobalRootCA.crt.pem
+# Configurações do banco de dados
+DB_HOST=localhost         # Endereço do servidor MySQL
+DB_USERNAME=root          # Nome de usuário do banco de dados
+DB_PASSWORD=              # Senha do banco de dados (deixe em branco se não houver senha)
+DB_NAME=controledeepis            # Nome do banco de dados
+
