--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Configurações do banco de dados
-DB_HOST=localhost         # Endereço do servidor MySQL
-DB_USERNAME=root          # Nome de usuário do banco de dados
-DB_PASSWORD=              # Senha do banco de dados (deixe em branco se não houver senha)
-DB_NAME=controledeepis            # Nome do banco de dados
-
+DB_HOST=arlendbteste.mysql.database.azure.com  # Endereço do servidor MySQL
+DB_USERNAME=arlendbteste                         # Nome de usuário do banco de dados
+DB_PASSWORD=3KT8zx203@Brasil                     # Senha do banco de dados
+DB_DATABASE=tabela1                               # Nome do banco de dados
+CA_CERT_PATH=DigiCertGlobalRootCA.crt.pem       # Caminho para o certificado CA
